<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wallet Master</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_account">Add account</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="currency">Currency</string>
    <string name="create">Create</string>
    <string name="create_new">Create new</string>
    <string name="create_new_account">Create new account</string>
    <string name="account_already_exist">Account with that name already exists!</string>
    <string name="account_name_invalid">You should provide valid account name!</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="remove">Remove</string>
    <string name="account_not_found">Account not found!</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="edit_account">Edit account</string>
    <string name="edit_operation">Edit operation</string>
    <string name="color">Color</string>
    <string name="action_add_operation">Add operation</string>
    <string name="from">From</string>
    <string name="amount">Amount</string>
    <string name="to">To</string>
    <string name="transfer">Transfer</string>
    <string name="conversion">Conversion</string>
    <string name="rate">Rate</string>
    <string name="delivered">Delivered</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="select_date">Please select date</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="optional">Optional</string>
    <string name="accounts_identical">Charger and beneficiar accounts are identical!</string>
    <string name="cannot_apply_op">Cannot apply operation! Please, double-check values.</string>
    <string name="operation_needs_acc">Operation needs account to succeed!</string>
    <string name="operation_needs_transfer_accs">Operation needs both transfer accounts to succeed!</string>
    <string name="operation_needs_amount">Cannot perform operation without amount!</string>
    <string name="operation_needs_category">Operation needs category!</string>
    <string name="confirm_action">Confirm action</string>
    <string name="really_delete_account">Do you really want to delete this account? All linked operations will be deleted too!</string>
    <string name="really_delete_operation">Really delete this operation? All changes to amounts will remain!</string>
    <string name="quick_filter">Quick filter</string>
    <string name="synchronize">Synchronize</string>
    <string name="already_have">Already have</string>
    <string name="do_you_have_account">Do you have existing account?</string>
    <string name="account_name">Account name</string>
    <string name="password">Password</string>
    <string name="auth_invalid">Invalid account name or password!</string>
    <string name="sync_starting">Sync starting…</string>
    <string name="authenticating">Authenticating…</string>
    <string name="getting_accounts">Getting accounts from server…</string>
    <string name="account_request_sent">Sent account request…</string>
    <string name="account_response_received">Got account acknowledge…</string>
    <string name="sync_completed">Sync is completed!</string>
    <string name="modify">Modify</string>
    <string name="create_new_operation">Create new operation</string>
    <string name="add">Add</string>
    <string name="preferred_account">Preferred account</string>
    <string name="sample">Sample</string>
    <string name="edit_category">Edit category</string>
    <string name="create_new_category">Create new category</string>
    <string name="category_not_found">Category not found!</string>
    <string name="category_exists">Category with that name and type already exists!</string>
    <string name="none">None</string>
    <string name="sync_settings">Sync settings</string>
    <string name="sync_server">Sync server</string>
    <string name="sync_server_summary">Server used for sync with other devices. May be your private server as well (see FAQ)</string>
    <string name="usability_settings">Usability settings</string>
    <string name="ask_for_delete">Confirm removals</string>
    <string name="ask_for_delete_summary">Show confirm dialog on account/operation delete</string>
    <string name="preferences">Preferences</string>
    <string name="category_request_sent">Sent category  request…</string>
    <string name="category_response_received">Got category acknowledge…</string>
    <string name="operation_request_sent">Sent operation request…</string>
    <string name="operation_response_received">Got operation acknowledge…</string>
    <string name="dont_show_again">Do not show again</string>
    <string name="action_add_category">Add category</string>
    <string name="select_beneficiar">Select beneficiar account</string>
    <string name="select_charge_acc">Select charge account</string>
    <string name="select_category">Select category</string>
    <string name="select_color">Select color</string>
    <string name="select_currency">Select currency</string>
    <string name="select_preferred_acc">Select preferred account</string>
    <string name="delete">Delete</string>
    <string name="cancel_operation">Cancel operation</string>
    <string name="select_action">Select action</string>
    <string name="add_filter">Add filter</string>
    <string name="app_theme">Theme</string>
    <string name="app_theme_summary">Theme applies after application restart</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="reset_filter">Reset filter</string>
    <string name="no_filter_specified">No valid filter specified!</string>
    <string name="filter">Filter</string>
    <string name="app_name_summary">Money management</string>
    <string name="action_add_budget">Create new budget</string>
    <string name="really_delete_budget">Do you really want to delete this budget an all linked counters?</string>
    <string name="all">All</string>
    <string name="period">Period:</string>
    <string name="hyphen">-</string>
    <string name="covered_account">Covered account:</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="account">Account</string>
    <string name="select_account">Select account</string>
    <string name="edit_budget">Edit budget</string>
    <string name="budget_not_found">Budget not found</string>
    <string name="create_new_budget_item">Create new budget item</string>
    <string name="max_amount">Max amount</string>
    <string name="edit_budget_item">Edit budget item</string>
    <string name="budget_item_not_found">Budget item not found</string>
    <string name="budget_item_exists">Budget item with that parent and category already exists!</string>
    <string name="budget_exists">Budget with this name already exists!</string>
    <string name="end_date_must_be_after">End date must be after start date</string>
    <string name="database_error">Database error!</string>
    <string name="database_error_persisting_account">Database error while persisting account!</string>
    <string name="operations_by_time">Operations by time</string>
    <string name="sums_by_categories">Sums by categories</string>
    <string name="total_sum_by_time">Total sum by time</string>
    <string name="dropdown">Dropdown</string>
    <string name="total_amount">Total amount</string>
    <string name="daily_amount">Daily amount</string>
    <string name="max">Max</string>
    <string name="daily">Daily</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="create_new_budget">Create new budget</string>
    <string name="time">Time</string>
    <string name="slice_by_day">Slice by day</string>
    <string name="cannot_create_account">Cannot create account!</string>
    <string name="force_shutdown">Forced shutdown</string>
    <string name="sync_error">Error while syncing!</string>
</resources>
